# Android-Live

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/me/huaisu/android_live/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
audio_encoder/: build.gradle
audio_encoder/src/main/: AndroidManifest.xml
audio_encoder/src/main/cpp/: AACEncoder.cpp  AACEncoder.h  AndroidLog.h  CMakeLists.txt  JniAacEncoder.cpp
audio_encoder/src/main/java/me/huaisu/audio/encode/: AacEncodeActivity.java  AacEncoder.java
audio_encoder/src/main/res/layout/: activity_aac_encode.xml
audio_encoder/src/main/res/values/: strings.xml
build_scripts/: build_fdkaac_for_android.sh  build_for_android.sh  config.sh
common/: build.gradle
common/src/main/: AndroidManifest.xml
common/src/main/java/me/huaisu/common/: App.java
common/src/main/java/me/huaisu/common/utils/: FileUtils.java  IOUtils.java  LogUtils.java  MatrixUtils.java  NumberUtils.java  UIWorker.java  Util.java
gradle/wrapper/: gradle-wrapper.properties
image_knowledge/: build.gradle
image_knowledge/src/main/: AndroidManifest.xml
image_knowledge/src/main/java/me/huaisu/image_knowledge/: ImageCompressActivity.java  ImageKnowledgeActivity.java  YUVOperationActivity.java
image_knowledge/src/main/java/me/huaisu/image_knowledge/utils/: DCT2Transformer.java  DCTUtils.java  IDCT2Transformer.java  ImageCompressUtils.java  YUVUtils.java
image_knowledge/src/main/res/layout/: activity_image_compress.xml  activity_image_knowledge.xml  activity_yuv_operation.xml
image_knowledge/src/main/res/raw/: lena_128x128_yuv420p.yuv  lena_256x256_yuv420p_gray.yuv
image_knowledge/src/main/res/values/: strings.xml
pcm_audio_recorder/src/main/: AndroidManifest.xml
pcm_audio_recorder/src/main/java/me/huaisu/pcm_audio_recorder/: PCMConfig.java  PCMEditActivity.java  PCMEditor.java  PCMPlayer.java  PCMRecorder.java
pcm_audio_recorder/src/main/res/layout/: activity_pcm.xml
pcm_audio_recorder/src/main/res/values/: strings.xml
